--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "95c195c5",
+   "execution_count": 14,
+   "id": "d6e5a762",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "22d438e8",
+   "id": "5605bef8",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c99c961",
+   "id": "804b2015",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0e2bf47",
+   "id": "0b781732",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "84019c18",
+   "id": "81cb2d1e",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1078b58b",
+   "id": "d4f1acb6",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3dc396d4",
+   "id": "b3793e58",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e5edb50",
+   "id": "acadea6a",
    "metadata": {},
    "source": [
     "### Featured Images"
@@ -152,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5c104498",
+   "id": "bf2a0a22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e1b36abb",
+   "id": "5b6c291d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "99e64d93",
+   "id": "790b966e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6aabb21b",
+   "id": "b3642b7c",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "103e1719",
+   "id": "f414cd6a",
    "metadata": {},
    "outputs": [
     {
@@ -233,8 +234,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "b1177741",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mars</th>\n",
+       "      <th>Earth</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>description</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mars - Earth Comparison</th>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Diameter:</th>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mass:</th>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moons:</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Distance from Sun:</th>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Length of Year:</th>\n",
+       "      <td>687 Earth days</td>\n",
+       "      <td>365.24 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperature:</th>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "      <td>-88 to 58°C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    Mars            Earth\n",
+       "description                                              \n",
+       "Mars - Earth Comparison             Mars            Earth\n",
+       "Diameter:                       6,779 km        12,742 km\n",
+       "Mass:                    6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "Moons:                                 2                1\n",
+       "Distance from Sun:        227,943,824 km   149,598,262 km\n",
+       "Length of Year:           687 Earth days      365.24 days\n",
+       "Temperature:                -87 to -5 °C      -88 to 58°C"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "df.columns=['description', 'Mars', 'Earth']\n",
+    "df.set_index('description', inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "af7f0b9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "81af24f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "458499db",
+   "id": "17b2e5d6",
    "metadata": {},
    "outputs": [],
    "source": []
